feat: add basic service functions
