# apps/api/cowork/coworkService.ts
@@ -7,22 +7,58 @@ export default class CoworkService {
     basicData: Pick<Cowork, 'email' | 'phone'>,
     address: Omit<Address, 'id'>
   ): Promise<Cowork> {
-    throw new Error('Service not implemented')
+    try {
+      return this._client.cowork.create({
+        data: {
+          ...basicData,
+          address: {
+            create: {
+              ...address
+            }
+          }
+        }
+      })
+    } catch (err) {
+      if (err instanceof Error) throw err
+    }
   }
 
   static async fetchAll(): Promise<Cowork[]> {
-    throw new Error('Service not implemented')
+    try {
+      return this._client.cowork.findMany()
+    } catch (err) {
+      if (err instanceof Error) throw err
+    }
   }
 
   static async fetchById(id: string): Promise<Cowork> {
-    throw new Error('Service not implemented')
+    try {
+      return this._client.cowork.findUniqueOrThrow({
+        where: { id }
+      })
+    } catch (err) {
+      if (err instanceof Error) throw err
+    }
   }
 
   static async edit(id: string, data: Partial<Cowork>): Promise<Cowork> {
-    throw new Error('Service not implemented')
+    try {
+      return this._client.cowork.update({
+        where: { id },
+        data: {
+          ...data
+        }
+      })
+    } catch (err) {
+      if (err instanceof Error) throw err
+    }
   }
 
   static async delete(id: string): Promise<boolean> {
-    throw new Error('Service not implemented')
+    try {
+      return !!this._client.cowork.delete({ where: { id } })
+    } catch (err) {
+      if (err instanceof Error) throw err
+    }
   }
 }
